test/fail/printvoid.min
program
    function void hello do 123!
start
    hello!
end    
